create first slides

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>Accessibility - What is is, who is it for?</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/black.css">
@@ -24,8 +24,60 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+
+				<!-- SLIDE 1 -->
+				<section>
+					<h1>Accessibility</h1>
+					<p class="fragment fade-up">What is it?</p>
+					<p class="fragment fade-up">Who is it for?</p>
+					
+					<aside class="notes">
+						<p>You're doing a good job!</p>
+					</aside>
+				</section>
+
+				<!-- SLIDE 2 -->
+				<section>
+					<h1>Accessibility</h1>
+					<blockquote cite="https://en.wikipedia.org/wiki/Accessibility">
+						<p>&ldquo;Accessibility refers to the design of products, devices, services, or environments for people who experience disabilities.&rdquo;</p>
+					</blockquote>
+					<p class="cite">
+						<a href="https://en.wikipedia.org/wiki/Accessibility">https://en.wikipedia.org/wiki/Accessibility</a>
+					</p>
+
+					<aside class="notes">
+						<p>NOTES</p>
+					</aside>
+				</section>
+
+				<!-- SLIDE #### -->
+				<section>
+					<h1>Universal design / Inclusive design</h1>
+					<blockquote>
+						<p>Universal design refers to broad-spectrum ideas meant to produce buildings, products and environments that are inherently accessible to older people, people without disabilities, and people with disabilities.</p>
+					</blockquote>
+
+					<aside class="notes">
+						<p>NOTES</p>
+					</aside>
+				</section>
+	
+				<!-- SLIDE #### -->
+				<section>
+					<h1>TITLE</h1>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, optio!</p>
+
+					<aside class="notes">
+						<p>NOTES</p>
+					</aside>
+				</section>
+	
+		
+
+
+
+
 			</div>
 		</div>
 
