--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>Accessibility - What is is, who is it for?</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+		<link rel="stylesheet" href="css/theme/night.css">
 		<link rel="stylesheet" href="css/overrides.css">
 
 		<!-- Theme used for syntax highlighting of code -->
