add slide content

--- a/plugin/notes/notes.html
+++ b/plugin/notes/notes.html
@@ -2,13 +2,52 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+		
 
-		<title>reveal.js - Slide Notes</title>
+		<title>A11Y SLSS - Slide Notes</title>
 
 		<style>
 			body {
 				font-family: Helvetica;
 				font-size: 18px;
+			}
+
+			.table {
+				background-color: transparent;
+				margin-bottom: 1rem;
+				max-width: 100%;
+				width: 100%;
+			}
+
+			table {
+				border-collapse: collapse;
+			}
+
+			.table-bordered {
+				border: 1px solid #dee2e6;
+			}
+
+			.table-bordered thead td, .table-bordered thead th {
+			border-bottom-width: 2px;
+			}
+
+			.table thead th {
+			border-bottom: 2px solid #dee2e6;
+			vertical-align: bottom;
+			}
+
+			.table-bordered td, .table-bordered th {
+			border: 1px solid #dee2e6;
+			}
+
+			.table td, .table th {
+			border-top: 1px solid #dee2e6;
+			padding: 0.75rem;
+			vertical-align: top;
+			}
+
+			th {
+			text-align: inherit;
 			}
 
 			#current-slide,
