--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
 					<blockquote cite="https://en.wikipedia.org/wiki/Accessibility">
 						<p>&ldquo;Accessibility refers to the design of products, devices, services, or environments for people who experience disabilities.&rdquo;</p>
 					</blockquote>
-					<p class="cite">
-						<a href="https://en.wikipedia.org/wiki/Accessibility">https://en.wikipedia.org/wiki/Accessibility</a>
+					<p class="cite">Source: <a href="https://en.wikipedia.org/wiki/Accessibility">Wikipedia: Accessibility</a>
 					</p>
 
 					<aside class="notes">
@@ -215,7 +214,7 @@
 					<blockquote>
 						<p>&ldquo;Universal design refers to broad-spectrum ideas meant to produce buildings, products and environments that are inherently accessible to older people, people without disabilities, and people with disabilities.&rdquo;</p>
 					</blockquote>
-
+					<p>Source: <a href="https://en.wikipedia.org/wiki/Universal_design">Wikipedia: Universal design</a></p>
 					<aside class="notes">
 						<p>NOTES</p>
 					</aside>
