--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 				<!-- SLIDE -->
 				<section>
 					<h1>Accessibility</h1>
-					<p class="fragment fade-up">What is it?</p>
-					<p class="fragment fade-up">Who is it for?</p>
+					<p class="fragment fade-up lg-txt">What is it?</p>
+					<p class="fragment fade-up lg-txt">Who is it for?</p>
 					
 					<aside class="notes">
 						<p>You're doing a good job!</p>
@@ -50,6 +50,19 @@
 						<p>NOTES</p>
 					</aside>
 				</section>
+
+				<!-- SLIDE -->
+				<section>
+					<h1>#a11y</h1>
+					<p><strong class="lg-txt">a</strong> ccessibilit (11 letters) <strong class="lg-txt">y</strong></p>
+					<img src="img/a11y.png" alt="">
+					<p>Image is an illustration by <a href="http://www.heydonworks.com/" rel="nofollow">Heydon Pickering</a> which you can <a href="https://dribbble.com/shots/2121794-rock-n-roll-a11y" rel="nofollow">see on Dribble</a>.</p>
+
+					<aside class="notes">
+						<p>NOTES</p>
+					</aside>
+				</section>
+			
 
 				<!-- SLIDE -->
 				<section>
@@ -134,10 +147,10 @@
 					<section>
 						<h1>Stats</h1>
 						<p>Over 11% of Canadian adults experienced one of the three most prevalent disability types: pain, mobility or flexibility. Of those who reported at least one of these disability types in 2012, more than 40% experienced all three at the same time.</p>
-						<p class="cite">Source: <a href="http://www.statcan.gc.ca/pub/89-654-x/89-654-x2013002-eng.htm">Disability in Canada: Initial findings from the Canadian Survey on Disability</a></p>
+						<p class="cite">Source: <a href="http://www.statcan.gc.ca/pub/89-654-x/89-654-x2013002-eng.htm">Disability in Canada: Initial findings from the Canadian Survey on Disability</a> from 2012</p>
 
 						<aside class="notes">
-							<p>NOTES</p>
+							<p>These are only the people who declare that they are disabled. There are a lot of people who are disabled but don't declare themselves disabled.</p>
 						</aside>
 					</section>
 					<section>
