add AT device examples

--- a/index.html
+++ b/index.html
@@ -599,15 +599,40 @@
 			
 				<!-- SLIDE -->
 				<section>
-					<h1>Assistive technology (AT)</h1>
-					<blockquote><p>Assistive technology is an umbrella term that includes assistive, adaptive, and rehabilitative devices for people with disabilities while also including the process used in selecting, locating, and using them.</p></blockquote>
-					<p>Source: <a href="https://en.wikipedia.org/wiki/Assistive_technology">Wikipedia: Assistive technology</a></p>
+					<section>
+						<h1>Assistive technology (AT)</h1>
+						<blockquote><p>Assistive technology is an umbrella term that includes assistive, adaptive, and rehabilitative devices for people with disabilities while also including the process used in selecting, locating, and using them.</p></blockquote>
+						<p>Source: <a href="https://en.wikipedia.org/wiki/Assistive_technology">Wikipedia: Assistive technology</a></p>
 
-					<p>EXAMPLES TO COME!!!</p>
-
-					<aside class="notes">
-						<p>NOTES</p>
-					</aside>
+						<aside class="notes">
+							<p>NOTES</p>
+						</aside>
+					</section>
+					<section>
+						<h1>Sign language interpreter</h1>
+						<p><a href="https://youtu.be/NN_WsMd6YIc">MotionSavvy's  Uni - a two way communication tool for the deaf and hearing</a></p>
+						
+						<aside class="notes">
+							<p>1:58 Minutes</p>
+							<p>Device used to translate sign languge</p>
+						</aside>
+					</section>
+					<section>
+						<h1>Talking glasses</h1>
+						<p><a href="https://www.youtube.com/watch?v=ZgFGMZTvoX0">OrCam MyEye</a></p>
+						<aside class="notes">
+							<p>2:45 minutes</p>
+							<p>Device used to read and describe things you are pointing at</p>
+						</aside>
+					</section>
+					<section>
+						<h1>Google makes spoons?!?!</h1>
+						<p><a href="https://www.youtube.com/watch?v=99t5c6j8BR0">Google Spoon Helps People With Tremors Eat</a></p>
+						<aside class="notes">
+							<p>1:37 minutes</p>
+							<p>Device used by people who have tremers and have problems feeding themselves.</p>
+						</aside>
+					</section>
 				</section>
 			
 
