--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<p class="fragment fade-up lg-txt">Who is it for?</p>
 					
 					<aside class="notes">
-						<p>You're doing a good job!</p>
+						<p>Just to let you all know that I'm a little nervous up here right now. I've done many workshops on how to write code and how to use different technology but this is the first time I actually have a slide show with notes. Here goes!!!!</p>
 					</aside>
 				</section>
 
@@ -264,9 +264,9 @@
 						<h1>Google bot is disabled</h1>
 						<p>Excerpt from George Orwell's Nineteen Eighty-Four</p>
 						<blockquote>
-							<p>It was a bright cold day in April, and the clocks were striking thirteen. Winston Smith, his chin nuzzled into his breast in an effort to escape the vile wind, slipped quickly through the glass doors of Victory Mansions, though not quickly enough to prevent a swirl of gritty dust from enteringalong with him.</p>
+							&ldquo;<p>It was a bright cold day in April, and the clocks were striking thirteen. Winston Smith, his chin nuzzled into his breast in an effort to escape the vile wind, slipped quickly through the glass doors of Victory Mansions, though not quickly enough to prevent a swirl of gritty dust from enteringalong with him.</p>
 							<p>The hallway smelt of boiled cabbage and old rag mats. At one end of it a coloured poster,too large for indoor display, had been tacked to the wall. It depicted simply an enormous face, more than a metre wide: the face of a man of about forty-five, with a heavy black moustache and ruggedly handsome features. Winston made for the stairs. It was no use trying the lift. Even at the best of times it was seldom working, and at present the electric current was cut off during daylight hours. It was part of the economy drive in preparation for Hate Week. The flat was seven flights up, and Winston, who was thirty-nine and had a varicose ulcer above his right ankle, went slowly, resting several times on the way. On each landing, opposite the lift-shaft, the poster with the enormous face gazed from the wall. It was one of those pictures which are so contrived that the eyes follow you about when you move. BIG BROTHER IS WATCHING YOU, the caption beneath it ran.</p>
-							<p>Inside the flat a fruity voice was reading out a list of figures which had something to do withthe production of pig-iron. The voice came from an oblong metal plaque like a dulled mirror which formed part of the surface of the right-hand wall. Winston turned a switch and the voice sank somewhat, though the words were still distinguishable. The instrument (the telescreen, it was called) could be dimmed, but there was no way of shutting it off completely. He moved over to the window: a smallish, frail figure, the meagreness of his body merely emphasized by the blue overalls which were the uniform of the party. His hair was very fair, his face naturally sanguine, his skin roughened by coarse soap and blunt razor blades and the cold of the winter that had just ended. </p>
+							<p>Inside the flat a fruity voice was reading out a list of figures which had something to do withthe production of pig-iron. The voice came from an oblong metal plaque like a dulled mirror which formed part of the surface of the right-hand wall. Winston turned a switch and the voice sank somewhat, though the words were still distinguishable. The instrument (the telescreen, it was called) could be dimmed, but there was no way of shutting it off completely. He moved over to the window: a smallish, frail figure, the meagreness of his body merely emphasized by the blue overalls which were the uniform of the party. His hair was very fair, his face naturally sanguine, his skin roughened by coarse soap and blunt razor blades and the cold of the winter that had just ended.&rdquo;</p>
 						</blockquote>
 						<aside class="notes">
 							<p>Does anyone know what the google bot does?</p>
@@ -436,7 +436,9 @@
 					<section data-background-image="img/posters/deaf.svg" data-background-size="contain">
 						<aside class="notes">
 							<h1>Designing for users who are D/deaf or hard of hearing</h1>
-							<blockquote cite="http://www2.gre.ac.uk/students/disability/aap/ddeaf">The term D/deaf is used throughout higher education and research to describe students who are Deaf (sign language users) and deaf (who are hard of hearing but who have English as their first language and may lipread and/or use hearing aids).</blockquote>
+							<blockquote cite="http://www2.gre.ac.uk/students/disability/aap/ddeaf">
+								<p>&ldquo;The term D/deaf is used throughout higher education and research to describe students who are Deaf (sign language users) and deaf (who are hard of hearing but who have English as their first language and may lipread and/or use hearing aids).&rdquo;</p>
+							</blockquote>
 							<table class="table table-bordered">
 								<thead>
 									<tr>
@@ -592,7 +594,7 @@
 					<p><a href="https://www.w3.org/WAI/standards-guidelines/wcag/">Web Content Accessibility Guidelines (WCAG) Overview</a></p>
 
 					<aside class="notes">
-						<p>This is boring but important, know it's there</p>
+						<p>WCAG is the guidelines created by the organization that writes the standards for coding the web. These are the standards that if followed will make your code more accessible. The guide is long and has a lot of information in it but it's very important to understand it if you're going to create code for the web.</p>
 					</aside>
 				</section>
 			 
@@ -601,11 +603,11 @@
 				<section>
 					<section>
 						<h1>Assistive technology (AT)</h1>
-						<blockquote><p>Assistive technology is an umbrella term that includes assistive, adaptive, and rehabilitative devices for people with disabilities while also including the process used in selecting, locating, and using them.</p></blockquote>
+						<blockquote><p>&ldquo;Assistive technology is an umbrella term that includes assistive, adaptive, and rehabilitative devices for people with disabilities while also including the process used in selecting, locating, and using them.&rdquo;</p></blockquote>
 						<p>Source: <a href="https://en.wikipedia.org/wiki/Assistive_technology">Wikipedia: Assistive technology</a></p>
 
 						<aside class="notes">
-							<p>NOTES</p>
+							<p>We've already talked about screen readers, which are just one of many different devices people with disabilities use to help them live a "normal" life. Here are others:</p>
 						</aside>
 					</section>
 					<section>
@@ -674,6 +676,7 @@
 						<li><a href="https://webaim.org">WebAIM</a></li>
 						<li><a href="https://www.microsoft.com/en-us/ai-for-accessibility">Microsoft AI for Accessibility</a></li>
 						<li><a href="https://www.canadalearningcode.ca/chapters/cornwall/">Canada Learning Code: Cornwall Chapter</a></li>
+						<li><a href="https://www.apple.com/ca/accessibility/">Apple Accessibility</a></li>
 					</ul>
 					<aside class="notes">
 						<p>NOTES</p>
