add Knowledge and Podcast lists

--- a/index.html
+++ b/index.html
@@ -674,6 +674,29 @@
 					
 				<!-- SLIDE -->
 				<section>
+					<h1>Podcast</h1>
+					<ul class="list-unlisted">
+						<li><a href="https://a11yrules.com/">A11Y Rules</a></li>
+						<li><a href="http://shoptalkshow.com/">Shop Talk Show</a></li>
+						<li><a href="https://twit.tv/shows/macbreak-weekly">Macbreak Weekly</a></li>
+						<li><a href="https://twit.tv/shows/security-now">Security Now</a></li>
+					</ul>
+				</section>
+			
+				<!-- SLIDE -->
+				<section>
+					<h1>Technology Knowledge</h1>
+					<ul class="list-unstyled">
+						<li><a href="https://developer.mozilla.org/en-US/docs/Learn/HTML"></a>HTML</li>
+						<li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS"></a>CSS</li>
+						<li><a href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript"></a>JavaScript</li>
+						<li><a href="https://git-scm.com/"></a>Git</li>
+						<li><a href="https://nodejs.org/en/"></a>NodeJS</li>
+					</ul>
+				</section>
+			
+			<!-- SLIDE -->
+				<section>
 					<h1>Follow them on Twitter!</h1>
 					<ul class="list-unstyled">
 						<li><a href="https://twitter.com/kellykbergeron">@kellykbergeron</a> - Executive Director of Cornwall Innovation Centre</li>
