add links to AT examples to notes

--- a/index.html
+++ b/index.html
@@ -614,6 +614,7 @@
 						<aside class="notes">
 							<p>1:58 Minutes</p>
 							<p>Device used to translate sign languge</p>
+							<p><a href="http://www.motionsavvy.com/uni.html">http://www.motionsavvy.com/uni.html</a></p>
 						</aside>
 					</section>
 					<section>
@@ -622,6 +623,7 @@
 						<aside class="notes">
 							<p>2:45 minutes</p>
 							<p>Device used to read and describe things you are pointing at</p>
+							<p><a href="https://www.orcam.com/gb/myeye/">https://www.orcam.com/gb/myeye/</a></p>
 						</aside>
 					</section>
 					<section>
@@ -630,6 +632,7 @@
 						<aside class="notes">
 							<p>1:37 minutes</p>
 							<p>Device used by people who have tremors and have problems feeding themselves.</p>
+							<p><a href="https://www.liftware.com/">https://www.liftware.com/</a></p>
 						</aside>
 					</section>
 				</section>
